[metadata]
name = modun
version = 0.0.1-dev
description = Codebase for training multi modal VAEs on multiple datasets.
url = https://github.com/Jimmy2027/MMVAE_Hub
keywords =
    modun

provides = modun

license = GNUv3
license_file = LICENSE

[options]
python_requires = >=3.7
install_requires =

    pymongo



packages = find:


[options.extras_require]
test =
    pytest

